--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -44,6 +44,6 @@ jobs:
         push-branch: 'master'
         commit-message: 'Update PDF'
         force-add: 'true'
-        files: CV_AdrianLowenstein_FR.pdf
+        files: CV_AdrianLowenstein_EN.pdf
         name: Adrian Löwenstein
         email: adrian.loewenstein@icloud.com 
