--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -41,7 +41,7 @@ jobs:
       uses: github-actions-x/commit@v2.6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        push-branch: 'master'
+        push-branch: 'main'
         commit-message: 'Update PDF'
         force-add: 'true'
         files: CV_AdrianLowenstein_EN.pdf
