--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Git repository
       uses: actions/checkout@v2
     - name: LaTeX compilation
-      uses: dante-ev/latex-action@v0.2.0
+      uses: dante-ev/latex-action@latest
       with:
         # The root LaTeX file to be compiled
         root_file: ./main.tex
