--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -31,7 +31,7 @@ jobs:
         # LaTeX engine to be used
         #compiler: xelatex # optional, default is latexmk
         # Extra arguments to be passed to the latex compiler
-        args: -xelatex -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
+        args: -latexmk -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
         # optional, default is -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
         # Install extra packages by apt-get
         # extra_system_packages: # optional
