--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -26,12 +26,11 @@ jobs:
       with:
         # The root LaTeX file to be compiled
         root_file: ./main.tex
-        # The working directory for the latex compiler to be invoked
-        # working_directory: # optional
         # LaTeX engine to be used
-        #compiler: xelatex # optional, default is latexmk
+        compiler: latexmk
+        # optional, default is latexmk
         # Extra arguments to be passed to the latex compiler
-        args: -latexmk -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
+        args: -interaction=nonstopmode -shell-escape
         # optional, default is -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode
         # Install extra packages by apt-get
         # extra_system_packages: # optional
